       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.37 (v0_8_37) on Linux (lb32001) on 7/9/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.37 (v0_8_37) on Linux (lb0170) on 6/28/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.37 (v0_8_37) on Linux (lb32001) on 6/28/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.37 (v0_8_37) on Linux (lb0170) on 6/28/2007 ==

2007-06-28  Brian Kahne  <bkahne@freescale.com>

	* Fixed some distribution problems:  We weren't distributing
	QuickThread files needed for building on x86_64.

	* Fatal encoding errors now throw a runtime_error with a message,
	rather than using the error log, so that the entire error can be
	squashed if not relevant to the user.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.36 (v0_8_36) on Linux (lb32001) on 5/22/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.36 (v0_8_36) on Linux (lb0169) on 5/22/2007 ==

2007-05-22  Brian Kahne  <bkahne@freescale.com>

	* Various tweaks to get this to compile with --disable-shared.  If
	shared objects are disabled, then we add pthread as a system
	library and we also define --allow-multiple-definition so that
	some of our symbols can replace symbols in other libraries.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.35 (v0_8_35) on Linux (lb32001) on 5/18/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.35 (v0_8_35) on Linux (lb0169) on 5/18/2007 ==

	
2007-05-18  Brian Kahne  <bkahne@freescale.com>

	* Removed the building of libgccpp.la because it caused link
	errors when linked statically against libstdc++ (it overrides new
	and delete, which causes multiply-defined-symbol errors if done
	statically).  We don't use this library, so that shouldn't be a
	problem.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.34 (v0_8_34) on Linux (lb0169) on 4/4/2007 ==
